--- a/Round2/Round2_file25.Rmd
+++ b/Round2/Round2_file25.Rmd
@@ -11,7 +11,7 @@ output: html_document
 file.name <- "file25"
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
-n.replications <-  1e3
+n.replications <-  5e2 #1e3
 p <- 23
 n <- 4e1 # total sample size-> n/2 in each group.
 n.permutations <- 3e2
@@ -22,7 +22,7 @@ cost.2 <- 1e-1
 source('Gilron Effect of Cross Validatino.R')
 
 ## Signal in location
-effects <- seq(0.5, 2, length=3) 
+effects <- seq(0.5, 4, length=5) 
 
 ## Dependence
 Sigma <- ar1_cov(n = p, rho=0.6)
@@ -35,7 +35,7 @@ direction <- sqrt(p) * Sigma.eigen$vectors[,which.min(abs(Sigma.eigen$values))]
 ## Fixed folds. Cross-Validated. All in one.
 ```{r}
 RhpcBLASctl::blas_set_num_threads(1)
-registerDoMC(cores=110)
+registerDoMC(cores=100)
 ```
 
 
@@ -158,14 +158,14 @@ pvals.melt[,c("reject","effect.factor"):=list(as.numeric(value <= 0.05), as.fact
 plot.3 <- pvals.melt %>% 
   ggplot(aes(y=reject, x=statistic, group=effect.factor, shape=effect.factor, color=effect.factor)) +
   theme_bw(base_size = 20)+
-  theme(legend.position="none")+
-  # ggtitle("Fixed signal, Gaussian Noise")+
+  # theme(legend.position="none")+
   ylab('Power')+
   xlab('')+
   stat_summary(fun.y='mean', geom="point", cex=4) +
   geom_hline(yintercept=0.05, lty=2)+
   geom_vline(xintercept=.limits, lty=c(3,2,3))+
-  coord_flip()
+  coord_flip()+ 
+  scale_fill_brewer(palette="blues")
 plot.3
 
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
