--- a/Round3/file3.Rmd
+++ b/Round3/file3.Rmd
@@ -36,7 +36,7 @@ direction <- 23 * direction0 / sqrt(n/2*maha)
 ## Fixed folds. Cross-Validated. All in one.
 ```{r}
 RhpcBLASctl::blas_set_num_threads(1)
-registerDoMC(cores=60)
+registerDoMC(cores=100)
 ```
 
 
@@ -121,19 +121,11 @@ pvals.melt <- pvals.melt[!is.na(statistic),,]
 
 
 ```{r}
-plot.3 <- pvals.melt %>% 
-  ggplot(aes(y=reject, x=statistic, group=effect.factor, shape=effect.factor, color=effect.factor)) +
-  theme_bw(base_size = 20)+
-  theme(legend.position="none")+
-  # ggtitle("Fixed signal, Gaussian Noise")+
-  ylab('Power')+
-  xlab('')+
-  stat_summary(fun.y='mean', geom="point", cex=4) +
-  geom_hline(yintercept=0.05, lty=2)+
-  geom_vline(xintercept=.limits, lty=c(3,2,3))+
-  coord_flip()
+source('prepare_graphics.R')
 plot(plot.3)
+```
 
+```{r}
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
 plot(plot.3)
 dev.off()
