--- a/Round3/file36.Rmd
+++ b/Round3/file36.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Basic setup"
+title: "AR(1) Signal in High PCs with fixed Frobenius-norm"
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
@@ -7,16 +7,14 @@ editor_options:
   chunk_output_type: console
 ---
 
-
 ```{r preliminaries}
-file.name <- "file2"
+file.name <- "file36"
 setwd('~/workspace/permuting_accuracy/Round3/')
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
-n.replications <-  1e1
-large.sample <- 1e0
-p <- 23*large.sample
-n <- 4e1*large.sample # total sample size-> n/2 in each group.
+n.replications <-  1e2
+p <- 23
+n <- 4e1 # total sample size-> n/2 in each group.
 n.permutations <- 3e2
 n.folds <- 4
 cost.1 <- 1e1
@@ -24,13 +22,16 @@ cost.2 <- 1e-1
 
 source('Gilron Effect of Cross Validatino.R')
 
-effects <- seq(0, 0.5, length=3) # change in location
+## Signal in location
+effects <- seq(0, 0.5, length=3) 
 
-Sigma <- diag(p)
+## Dependence
+Sigma <- ar1_cov(n = p, rho=0.6)
 # lattice::levelplot(Sigma)
-direction0 <- rep(1,p)
-maha <- direction0 %*% solve(Sigma) %*% direction0 %>% c
-direction <- 23 * direction0 / sqrt(n/2*maha)
+Sigma.eigen <- eigen(Sigma)
+# plot(Sigma.eigen$values, type='h')
+direction0 <- Sigma.eigen$vectors[,1] 
+direction <- direction0 * sqrt(Frob(Sigma)/Euclid(direction0))
 ```
 
 
@@ -40,6 +41,7 @@ RhpcBLASctl::blas_set_num_threads(1)
 registerDoMC(cores=100)
 ```
 
+
 ```{r independent noise variable folds}
 pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
   foreach(effect=effects, .combine=rbind)  %do% {
@@ -48,14 +50,12 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     ## Gaussian noise
     .noise <- rmvnorm(n=n, sigma = Sigma)
-    
+
     ## Shift alternative:
-    # effect <- effects[[3]]
-    
     noise <- .noise
-    shift <- matrix(effect * direction, nrow=n/2, ncol=p, byrow = TRUE)
+    shift <- matrix(effect * direction, nrow=20, ncol=23, byrow = TRUE)
     noise[labels,] <- noise[labels,] + shift
-    
+
     ## Compute observed statistic
     x1 <- noise[labels,]
     x2 <- noise[!labels,]
@@ -65,12 +65,12 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
-    ts <-statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
+    ts <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
     
     # Prepare to permute
     old.labels <- labels
     old.folds.ids <- fold.ids
-    
+
     # Initialize permuted statistics
     permuted <- matrix(NA, ncol=length(ts), nrow=n.permutations)
     
@@ -85,31 +85,33 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       permuted[i,] <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
     } # End permutation
     
-    # Compute p-vals for each statistic
+    ## Compute p-vals for each statistic
     pvals <- rep(NA, length(ts))
     for(i in seq_along(ts)){
-      pvals[i] <- mean(permuted[,i]>=ts[i], na.rm=TRUE)
+      pvals[i] <- mean(ts[i]<=permuted[,i], na.rm=TRUE)
     }
     names(pvals) <- names(ts)
-    
+
     c(effect=effect, pvals) 
   }
 } 
-
+  
 pbPost(type = "note", body = "Done", the.message)
 save.image(file=paste(file.name,".RData", sep=''))
 ```
 
 
-```{r}
-load('file12.RData')
+
+```{r analyze multiple effects}
 source('prepare_graphics.R')
 plot(plot.3)
 ```
+
 
 ```{r}
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
 plot(plot.3)
 dev.off()
 ```
+
 
